[gd_scene load_steps=2 format=3 uid="uid://chud123def456"]

[ext_resource type="Script" path="res://Scripts/game_hud.gd" id="1_hud"]

[node name="GameHUD" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource("1_hud")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 20.0
offset_top = 20.0
offset_right = 300.0
offset_bottom = 200.0

[node name="HealthBar" type="ProgressBar" parent="VBoxContainer"]
layout_mode = 2
value = 100.0
show_percentage = false

[node name="HealthLabel" type="Label" parent="VBoxContainer/HealthBar"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -40.0
offset_top = -11.5
offset_right = 40.0
offset_bottom = 11.5
text = "100/100"
horizontal_alignment = 1

[node name="PlayerInfo" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="LevelLabel" type="Label" parent="VBoxContainer/PlayerInfo"]
layout_mode = 2
text = "Level: 1"

[node name="ExpBar" type="ProgressBar" parent="VBoxContainer/PlayerInfo"]
layout_mode = 2
value = 0.0
show_percentage = false

[node name="GameInfo" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="WaveLabel" type="Label" parent="VBoxContainer/GameInfo"]
layout_mode = 2
text = "Wave: 1"

[node name="EnemiesLabel" type="Label" parent="VBoxContainer/GameInfo"]
layout_mode = 2
text = "Enemies: 0"

[node name="TimerLabel" type="Label" parent="VBoxContainer/GameInfo"]
layout_mode = 2
text = "Time: 60s"

[node name="Crosshair" type="Control" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -10.0
offset_top = -10.0
offset_right = 10.0
offset_bottom = 10.0
mouse_filter = 2

[node name="CrosshairCenter" type="Panel" parent="Crosshair"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -1.0
offset_top = -1.0
offset_right = 1.0
offset_bottom = 1.0
